<resources>
    <string name="app_name">AppJaquinha</string>

    //drawer
    <string name="nav_drawer_home">Início</string>
    <string name="nav_drawer_diario">Diário</string>
    <string name="nav_drawer_geladeira">Geladeira</string>
    <string name="nav_drawer_objetivos">Objetivos</string>
    <string name="nav_drawer_estatisticas">Estatisticas</string>
    <string name="nav_drawer_restricoes">Restrições</string>
    <string name="nav_drawer_configuracoes">Configurações</string>
    <string name="nav_drawer_exit">Sair</string>

    //textos
    <string name="e_mail">E-mail</string>
    <string name="senha">Senha</string>
    <string name="criar_conta">Cadastrar</string>
    <string name="entrar">Entrar</string>
    <string name="nome_de_usu_rio">Nome de usuário</string>
    <string name="data_de_nascimento">Data de Nascimento</string>
    <string name="ano_de_nascimento">2000</string>
    <string name="sexo">Sexo</string>
    <string name="peso">Massa corporal (kg)</string>
    <string name="altura">Altura (cm)</string>
    <string name="atualizar">Atualizar</string>
    <string name="camera">Camera</string>
    <string name="salvar">Salvar</string>
    <string name="cancelar">Cancelar</string>
    <string name="adicionar">Adicionar alimento</string>
    <string name="sem_data">Sem data</string>
    <string name="objetivo">Objetivo</string>
    <string name="adicionar_data">Adicionar data</string>
    <string name="nomeDoApp">Pé na Jaca</string>
    <string-array name="meses">
        <item>Janeiro</item>
        <item>Fevereiro</item>
        <item>Março</item>
        <item>Abril</item>
        <item>Maio</item>
        <item>Junho</item>
        <item>Julho</item>
        <item>Agosto</item>
        <item>Setembro</item>
        <item>Outubro</item>
        <item>Novembro</item>
        <item>Dezembro</item>
    </string-array>

    //alimento
    <string name="nome_alimento">Nome do alimento</string>
    <string name="porcao">Porção (g)</string>
    <string name="kcal">Valor energético (kcal)</string>
    <string name="carboidrato">Carboidratos (g)</string>
    <string name="proteinas">Proteínas (g)</string>
    <string name="gordurasTotais">Gorduras Totais (g)</string>
    <string name="gordurasSat">Gorduras Saturadas (g)</string>
    <string name="gordurasTrans">Gorduras Trans (g)</string>
    <string name="fibra">Fibra Alimentar (g)</string>
    <string name="sodio">Sódio (mg)</string>
    <string name="acucares">Açúcares (mg)</string>
    <string name="colesterol">Colesterol (mg)</string>
    <string name="calcio">Cálcio (mg)</string>
    <string name="ferro">Ferro (mg)</string>

    //camera
    <string name="ok">OK</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="low_storage_error">Ocr dependencies cannot be downloaded due to low device storage</string>
    <string name="title_activity_main">Ocr Detector Sample</string>
    <string name="ocr_header">Click &quot;Detect Text&quot; to detect text</string>
    <string name="read_text">Detect Text</string>
    <string name="auto_focus">Auto Focus</string>
    <string name="use_flash">Use Flash</string>
    <string name="ocr_success">Texto lido com sucesso</string>
    <string name="ocr_failure">Nenhum texto capturado</string>
    <string name="ocr_error">"Erro na leitura do texto: %1$s"</string>

</resources>
