<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/nome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="12"
            android:backgroundTint="@android:color/white"
            android:inputType="textAutoComplete"
            android:textColor="#ffff"
            android:hint="@string/nome_alimento"
            android:maxLines="1"
            android:imeOptions="actionNext"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

        <EditText
            android:id="@+id/porcao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="12"
            android:backgroundTint="@android:color/white"
            android:inputType="number"
            android:textColor="#ffff"
            android:hint="@string/porcao"
            android:maxLines="1"
            android:imeOptions="actionNext"
            app:layout_constraintTop_toBottomOf="@id/nome"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

        <EditText
            android:id="@+id/kcal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="12"
            android:backgroundTint="@android:color/white"
            android:inputType="number"
            android:textColor="#ffff"
            android:hint="@string/kcal"
            android:maxLines="1"
            android:imeOptions="actionNext"
            app:layout_constraintTop_toBottomOf="@id/porcao"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

        <EditText
            android:id="@+id/carboidrato"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="12"
            android:backgroundTint="@android:color/white"
            android:inputType="number"
            android:textColor="#ffff"
            android:hint="@string/carboidrato"
            android:maxLines="1"
            android:imeOptions="actionNext"
            app:layout_constraintTop_toBottomOf="@id/kcal"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

        <EditText
            android:id="@+id/proteina"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="12"
            android:backgroundTint="@android:color/white"
            android:inputType="number"
            android:textColor="#ffff"
            android:hint="@string/proteinas"
            android:maxLines="1"
            android:imeOptions="actionNext"
            app:layout_constraintTop_toBottomOf="@id/carboidrato"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

        <EditText
            android:id="@+id/gordurasTotais"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="12"
            android:backgroundTint="@android:color/white"
            android:inputType="number"
            android:textColor="#ffff"
            android:hint="@string/gordurasTotais"
            android:maxLines="1"
            android:imeOptions="actionNext"
            app:layout_constraintTop_toBottomOf="@id/proteina"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

        <EditText
            android:id="@+id/gordurasSat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="12"
            android:backgroundTint="@android:color/white"
            android:inputType="number"
            android:textColor="#ffff"
            android:hint="@string/gordurasSat"
            android:maxLines="1"
            android:imeOptions="actionNext"
            app:layout_constraintTop_toBottomOf="@id/gordurasTotais"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

        <EditText
            android:id="@+id/gordurasTrans"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="12"
            android:backgroundTint="@android:color/white"
            android:inputType="number"
            android:textColor="#ffff"
            android:hint="@string/gordurasTrans"
            android:maxLines="1"
            android:imeOptions="actionNext"
            app:layout_constraintTop_toBottomOf="@id/gordurasSat"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

        <EditText
            android:id="@+id/fibra"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="12"
            android:backgroundTint="@android:color/white"
            android:inputType="number"
            android:textColor="#ffff"
            android:hint="@string/fibra"
            android:maxLines="1"
            android:imeOptions="actionNext"
            app:layout_constraintTop_toBottomOf="@id/gordurasTrans"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

        <EditText
            android:id="@+id/sodio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="12"
            android:backgroundTint="@android:color/white"
            android:inputType="number"
            android:textColor="#ffff"
            android:hint="@string/sodio"
            android:maxLines="1"
            android:imeOptions="actionNext"
            app:layout_constraintTop_toBottomOf="@id/fibra"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

        <EditText
            android:id="@+id/acucares"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="12"
            android:backgroundTint="@android:color/white"
            android:inputType="number"
            android:textColor="#ffff"
            android:hint="@string/acucares"
            android:maxLines="1"
            android:imeOptions="actionNext"
            app:layout_constraintTop_toBottomOf="@id/sodio"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

        <EditText
            android:id="@+id/colesterol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="12"
            android:backgroundTint="@android:color/white"
            android:inputType="number"
            android:textColor="#ffff"
            android:hint="@string/colesterol"
            android:maxLines="1"
            android:imeOptions="actionNext"
            app:layout_constraintTop_toBottomOf="@id/acucares"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

        <EditText
            android:id="@+id/calcio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="12"
            android:backgroundTint="@android:color/white"
            android:inputType="number"
            android:textColor="#ffff"
            android:hint="@string/calcio"
            android:maxLines="1"
            android:imeOptions="actionNext"
            app:layout_constraintTop_toBottomOf="@id/colesterol"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

        <EditText
            android:id="@+id/ferro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="12"
            android:backgroundTint="@android:color/white"
            android:inputType="number"
            android:textColor="#ffff"
            android:hint="@string/ferro"
            android:maxLines="1"
            android:imeOptions="actionDone"
            app:layout_constraintTop_toBottomOf="@id/calcio"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

        <Button
            android:id="@+id/camerabutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@null"
            android:text="@string/camera"
            android:textSize="6pt"
            android:textColor="#00e2ba"
            android:typeface="sans"
            app:layout_constraintTop_toBottomOf="@id/ferro"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

        <Button
            android:id="@+id/salvarbutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@null"
            android:text="@string/salvar"
            android:textSize="6pt"
            android:textColor="#00e2ba"
            android:typeface="sans"
            app:layout_constraintTop_toBottomOf="@id/camerabutton"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

        <Button
            android:id="@+id/cancelarbutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@null"
            android:text="@string/cancelar"
            android:textSize="6pt"
            android:textColor="#00e2ba"
            android:typeface="sans"
            app:layout_constraintTop_toBottomOf="@id/salvarbutton"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

    </android.support.constraint.ConstraintLayout>

</ScrollView>