<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <EditText
            android:id="@+id/nome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="12"
            android:backgroundTint="@android:color/white"
            android:inputType="textPersonName"
            android:textColor="#ffff"
            android:hint="@string/nome_de_usu_rio"
            android:maxLines="1"
            android:imeOptions="actionNext"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <EditText
            android:id="@+id/data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="12"
            android:backgroundTint="@android:color/white"
            android:textColor="#ffff"
            android:hint="@string/data_de_nascimento"
            android:maxLines="1"
            android:imeOptions="actionNext"
            android:focusable="false"
            app:layout_constraintTop_toBottomOf="@+id/nome"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <EditText
            android:id="@+id/sexo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="12"
            android:backgroundTint="@android:color/white"
            android:inputType="textAutoComplete"
            android:textColor="#ffff"
            android:hint="@string/sexo"
            android:maxLines="1"
            android:imeOptions="actionNext"
            app:layout_constraintTop_toBottomOf="@+id/data"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <EditText
            android:id="@+id/peso"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="12"
            android:backgroundTint="@android:color/white"
            android:inputType="number"
            android:textColor="#ffff"
            android:hint="@string/peso"
            android:maxLines="1"
            android:imeOptions="actionNext"
            app:layout_constraintTop_toBottomOf="@+id/sexo"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <EditText
            android:id="@+id/altura"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="12"
            android:backgroundTint="@android:color/white"
            android:inputType="number"
            android:textColor="#ffff"
            android:hint="@string/altura"
            android:maxLines="1"
            android:imeOptions="actionDone"
            app:layout_constraintTop_toBottomOf="@+id/peso"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <Button
            android:id="@+id/cadastrobutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:layout_marginTop="10dp"
            android:textSize="6pt"
            android:textColor="#00e2ba"
            android:typeface="sans"
            android:text="@string/atualizar"
            app:layout_constraintRight_toRightOf="@id/altura"
            app:layout_constraintTop_toBottomOf="@+id/altura" />

    </android.support.constraint.ConstraintLayout>

</ScrollView>