<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="12"
            android:hint="@string/e_mail"
            android:inputType="textEmailAddress"
            android:textColor="#000000"
            android:backgroundTint="@android:color/white"
            android:layout_marginTop="10dp"
            android:maxLines="1"
            android:imeOptions="actionNext"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <EditText
            android:id="@+id/senha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="12"
            android:backgroundTint="@android:color/white"
            android:inputType="textPassword"
            android:textColor="#000000"
            android:hint="@string/senha"
            android:maxLines="1"
            android:imeOptions="actionNext"
            app:layout_constraintTop_toBottomOf="@+id/email"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <EditText
            android:id="@+id/nome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="12"
            android:backgroundTint="@android:color/white"
            android:inputType="textPersonName"
            android:textColor="#000000"
            android:hint="@string/nome_de_usu_rio"
            android:maxLines="1"
            android:imeOptions="actionNext"
            app:layout_constraintTop_toBottomOf="@+id/senha"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />
        <TextView
            android:id="@+id/data_de_nascimento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="16"
            android:backgroundTint="@android:color/white"
            android:inputType="number"
            android:textColor="#000000"
            android:hint= "@string/data_de_nascimento"
            android:maxLines="1"
            android:imeOptions="actionNext"
            app:layout_constraintTop_toBottomOf="@+id/nome"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />
        <!--android:focusable="false"-->


        <Spinner
            android:id="@+id/diaSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:ems="12"
            android:imeOptions="actionNext"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/data_de_nascimento" />

        <Spinner
            android:id="@+id/mesSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="12"
            android:imeOptions="actionNext"
            app:layout_constraintLeft_toRightOf="@id/diaSpinner"

            app:layout_constraintTop_toBottomOf="@+id/data_de_nascimento" />
       <EditText
             android:id="@+id/anoText"
             android:layout_width="50dp"
             android:layout_height="wrap_content"
             android:ems="12"
             android:backgroundTint="@android:color/white"
             android:inputType="number"
             android:textColor="#000000"
             android:hint= "@string/ano_de_nascimento"
             android:maxLines="1"
             android:imeOptions="actionNext"
             app:layout_constraintTop_toBottomOf="@+id/data_de_nascimento"
            app:layout_constraintLeft_toRightOf="@id/mesSpinner"/>
        <!--android:focusable="false"-->

        <EditText
            android:id="@+id/sexo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="12"
            android:backgroundTint="@android:color/white"
            android:inputType="textAutoComplete"
            android:textColor="#000000"
            android:hint="@string/sexo"
            android:maxLines="1"
            android:imeOptions="actionNext"
            app:layout_constraintTop_toBottomOf="@+id/anoText"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <EditText
            android:id="@+id/peso"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="12"
            android:backgroundTint="@android:color/white"
            android:inputType="number"
            android:textColor="#000000"
            android:hint="@string/peso"
            android:maxLines="1"
            android:imeOptions="actionNext"
            app:layout_constraintTop_toBottomOf="@+id/sexo"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <EditText
            android:id="@+id/altura"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="12"
            android:backgroundTint="@android:color/white"
            android:inputType="number"
            android:textColor="#000000"
            android:hint="@string/altura"
            android:maxLines="1"
            android:imeOptions="actionDone"
            app:layout_constraintTop_toBottomOf="@+id/peso"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <Button
            android:id="@+id/cadastrobutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@null"
            android:text="@string/criar_conta"
            android:textSize="6pt"
            android:textColor="#00e2ba"
            android:typeface="sans"
            app:layout_constraintRight_toRightOf="@id/altura"
            app:layout_constraintTop_toBottomOf="@+id/altura" />

    </android.support.constraint.ConstraintLayout>
</ScrollView>