<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="12"
            android:hint="@string/e_mail"
            android:inputType="textEmailAddress"
            android:textColor="#000000"
            android:backgroundTint="@android:color/white"
            android:layout_marginTop="-209dp"
            android:maxLines="1"
            android:imeOptions="actionNext"
            app:layout_constraintTop_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <EditText
            android:id="@+id/senha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="12"
            android:backgroundTint="@android:color/white"
            android:inputType="textPassword"
            android:textColor="#000000"
            android:hint="@string/senha"
            android:maxLines="1"
            android:imeOptions="actionDone"
            app:layout_constraintTop_toBottomOf="@+id/email"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <Button
            android:id="@+id/enterButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@null"
            android:text="@string/entrar"
            android:textSize="6pt"
            android:textColor="#00e2ba"
            android:typeface="sans"
            app:layout_constraintRight_toRightOf="@id/senha"
            app:layout_constraintTop_toBottomOf="@id/senha" />

        <Button
            android:id="@+id/criarconta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:text="@string/criar_conta"
            android:textSize="6pt"
            android:textColor="#00e2ba"
            android:typeface="sans"
            android:layout_marginTop="10dp"
            app:layout_constraintLeft_toLeftOf="@id/senha"
            app:layout_constraintTop_toBottomOf="@id/senha" />

    </android.support.constraint.ConstraintLayout>
</ScrollView>